...
    <string name="settings_advanced">Advanced</string>
    <string name="settings_updates">Updates</string>
    <string name="open_update_controls">Manage app updates</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="open_navigation">Open navigation</string>
    <string name="collapse_sidebar">Collapse sidebar</string>
    <string name="expand_sidebar">Expand sidebar</string>
    <string name="collapsed">Collapsed</string>
    <string name="expanded">Expanded</string>
    <string name="piano_calibrate_title">Calibrate your piano</string>
    <string name="piano_two_strikes">Two separate strikes for each note.</string>
...
